# om.learn.opengl

./: .gitignore  CMakeLists.txt  ReadMe.md
shaders/: shader.fs  texture.fs  texture.vs
src/: Texture.h  XUtils.cpp  main.cpp  shader.h
